Fix ad text colour for dark mode

--- a/src/css/04-components/_ad.scss
+++ b/src/css/04-components/_ad.scss
@@ -1,6 +1,7 @@
 .c-ad {
   display: flex;
   justify-content: center;
+  color: $black;
 
   #carbonads {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
